# ouroboros

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: WorkedExample_MathTools.ipynb  WorkedExample_MathTools.md  WorkedExample_MathTools.py  giocomo_python_autodidact.ipynb  giocomo_python_autodidact.md  giocomo_python_autodidact.py  giocomo_python_interactive_reference.ipynb  giocomo_python_interactive_reference.md  giocomo_python_interactive_reference.py  jupytext_howto_for_developers.md
notebooks/raw_data/: twins.csv
ouroboros/: utilitarian_module_name.py
ouroboros/sub_package/: utilitarian_module_name.py
src/ouroboros/: __init__.py  autodidact_tools.py
